# coroutine-mcu

./: .gitignore  CMakeLists.txt  README.md  coro.cpp  crtp-proxy.cpp  main.cpp  prvalue.cpp  sched.h  syscalls.c  task.h  test2.cpp
_orig/: fake_uart.h  sched-orig.h
cmake/: toolchain-stm32f7.cmake
corocore/: scheduler.h
corocore/include/corocore/: direct_tuple.h  scheduler.h
coronimo/include/coronimo/: direct_tuple.h  scheduler.h  utility.h
samples/basic/: Makefile  main.cpp
